--- a/capstone3/notebooks/Capstone3_NaiveBayes.ipynb
+++ b/capstone3/notebooks/Capstone3_NaiveBayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -111,13 +111,13 @@
        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vectorizer = CountVectorizer(ngram_range=(1, 2))\n",
+    "vectorizer = CountVectorizer(ngram_range=(1, 5))\n",
     "counts = vectorizer.fit_transform(train_data['text'].values)\n",
     "classifier = MultinomialNB()\n",
     "targets = train_data['profitable'].values\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,68 +172,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_positives = np.where((df_nb['nb_prediction'] == 1) & (df_nb['profitable'] == 1), 1,0)\n",
+    "true_negatives = np.where((df_nb['nb_prediction'] == 0) & (df_nb['profitable'] == 0), 1,0)\n",
+    "false_positives = np.where((df_nb['nb_prediction'] == 1) & (df_nb['profitable'] == 0), 1,0)\n",
+    "false_negatives = np.where((df_nb['nb_prediction'] == 0) & (df_nb['profitable'] == 1), 1,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = (true_positives.sum()+true_negatives.sum())/df_nb.title.count()\n",
+    "precision = true_positives.sum()/(true_positives.sum()+false_positives.sum())\n",
+    "recall = true_positives.sum()/(true_positives.sum()+false_negatives.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6290956749672346"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4447 entries, 0 to 4446\n",
-      "Data columns (total 32 columns):\n",
-      "Unnamed: 0      4447 non-null int64\n",
-      "Unnamed: 0.1    4447 non-null int64\n",
-      "title           4447 non-null object\n",
-      "director        4447 non-null object\n",
-      "description     4447 non-null object\n",
-      "duration        4447 non-null int64\n",
-      "year            4447 non-null int64\n",
-      "budget          4447 non-null int64\n",
-      "genre           4447 non-null object\n",
-      "profitable      4447 non-null int64\n",
-      "is_Animation    4447 non-null int64\n",
-      "is_Biography    4447 non-null int64\n",
-      "is_Action       4447 non-null int64\n",
-      "is_Mystery      4447 non-null int64\n",
-      "is_Sci-Fi       4447 non-null int64\n",
-      "is_Comedy       4447 non-null int64\n",
-      "is_Fantasy      4447 non-null int64\n",
-      "is_Sport        4447 non-null int64\n",
-      "is_Thriller     4447 non-null int64\n",
-      "is_Film-Noir    4447 non-null int64\n",
-      "is_Drama        4447 non-null int64\n",
-      "is_Adventure    4447 non-null int64\n",
-      "is_Horror       4447 non-null int64\n",
-      "is_Musical      4447 non-null int64\n",
-      "is_History      4447 non-null int64\n",
-      "is_Crime        4447 non-null int64\n",
-      "is_Music        4447 non-null int64\n",
-      "is_Family       4447 non-null int64\n",
-      "is_Romance      4447 non-null int64\n",
-      "is_Western      4447 non-null int64\n",
-      "is_War          4447 non-null int64\n",
-      "text            4447 non-null object\n",
-      "dtypes: int64(27), object(5)\n",
-      "memory usage: 1.1+ MB\n"
+      "480\n",
+      "65\n",
+      "283\n",
+      "62\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(true_positives.sum())\n",
+    "print(true_negatives.sum())\n",
+    "print(false_positives.sum())\n",
+    "print(false_negatives.sum())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6123595505617978\n",
+      "0.6290956749672346\n",
+      "0.8856088560885609\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy)\n",
+    "print(precision)\n",
+    "print(recall)"
+   ]
   },
   {
    "cell_type": "code",
